--- a/changes.asciidoc
+++ b/changes.asciidoc
@@ -1,12 +1,12 @@
-# Changelog
+= Changelog
 All notable changes to this project will be documented in this file.
 
 The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/),
 and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).
 
-## [Unreleased]
+== [Unreleased]
 none
 
-## [1.0.0] - 2025 12 12
-### Added
+== [1.0.0] - 2025 12 12
+=== Added
 - Initial Release
